--- a/web/ff/fflist.html
+++ b/web/ff/fflist.html
@@ -1227,9 +1227,9 @@
         size="4"><span><b><span style="color: #0000ee;"><font size="5">&nbsp;&nbsp;
                 </font></span></b></span></font><font size="4"><span><b><span style="color: #0000ee;"></span></b></span></font><span><font
 
-          size="4"><font size="5"><a href="https://luysyta.github.io/jynaty/web/ff/inscap.html"
+          size="4"><font size="5"><a href="https://luysyta.github.io/jynaty/web/ff/ktu.fvamp.html"
 
-              target="_blank" title="inscap.html"></a></font></font></span><span><font
+              target="_blank" title="ktu.fvamp.html">185</a></font></font></span><span><font
 
           size="4"><font size="5"><span><font size="4"><font size="5"><span><font
 
