--- a/web/ff/fflist.html
+++ b/web/ff/fflist.html
@@ -1241,9 +1241,9 @@
 
                       size="4">&nbsp;&nbsp;&nbsp; </font></span></font></font></span><a
 
-              href="https://luysyta.github.io/jynaty/web/ff/egun.html" target="_blank"
+              href="https://luysyta.github.io/jynaty/web/ff/coll.pyros.html" target="_blank"
 
-              title="egun.html"></a></font></font></span><span><font size="4"><font
+              title="coll.pyros.html">187</a></font></font></span><span><font size="4"><font
 
             size="5"><span><font size="4"><font size="5"><span><font size="4">&nbsp;&nbsp;
                       </font></span></font></font></span><a href="https://luysyta.github.io/jynaty/web/ff/eloise.html"
