--- a/web/ff/fflist.html
+++ b/web/ff/fflist.html
@@ -1260,9 +1260,9 @@
 
                       size="4">&nbsp;&nbsp; </font></span></font></font></span><a
 
-              href="https://luysyta.github.io/jynaty/web/ff/como.html" target="_blank"
+              href="https://luysyta.github.io/jynaty/web/ff/bmrg.flyfr.html" target="_blank"
 
-              title="como.html"></a></font></font></span><font size="4"><span><b><span
+              title="bmrg.flyfr.html">190</a></font></font></span><font size="4"><span><b><span
 
               style="color: #0000ee;"><font size="5">&nbsp;&nbsp; </font></span></b></span></font><font
 
