--- a/web/ff/fflist.html
+++ b/web/ff/fflist.html
@@ -1268,9 +1268,9 @@
 
         size="4"><span><b><span style="color: #0000ee;"></span></b></span></font><span><font
 
-          size="4"><font size="5"><a href="https://luysyta.github.io/jynaty/web/ff/bride.html"
+          size="4"><font size="5"><a href="https://luysyta.github.io/jynaty/web/ff/paum.frssn.html"
 
-              target="_blank" title="bride.html"></a></font></font></span><span><font
+              target="_blank" title="paum.frssn.html">191</a></font></font></span><span><font
 
           size="4"><font size="5"><span><font size="4"><font size="5"><span><font
 
