--- a/web/ff/fflist.html
+++ b/web/ff/fflist.html
@@ -1276,9 +1276,9 @@
 
                       size="4">&nbsp;&nbsp; </font></span></font></font></span><a
 
-              href="https://luysyta.github.io/jynaty/web/ff/joven.html" target="_blank"
+              href="https://luysyta.github.io/jynaty/web/ff/locarm.ntraq.html" target="_blank"
 
-              title="joven.html"></a><span><font size="4"><font size="5"><span><font
+              title="locarm.ntraq.html">192</a><span><font size="4"><font size="5"><span><font
 
                       size="4">&nbsp;&nbsp; </font></span></font></font></span><a
 
