--- a/web/ff/fflist.html
+++ b/web/ff/fflist.html
@@ -1296,9 +1296,9 @@
 
                       style="color: #0000ee;">&nbsp; </span></span></font></font></span><a
 
-              href="https://luysyta.github.io/jynaty/web/ff/lily.html" target="_blank"
+              href="https://luysyta.github.io/jynaty/web/ff/csstt.wmn.html" target="_blank"
 
-              title="lily.html"></a></font></font></span></h3>
+              title="csstt.wmn.html">195</a></font></font></span></h3>
     <p><br>
     </p>
     <p></p>
