--- a/web/ff/fflist.html
+++ b/web/ff/fflist.html
@@ -1333,9 +1333,9 @@
 
                       size="4">&nbsp;&nbsp; </font></span></font></font></span><a
 
-              href="https://luysyta.github.io/jynaty/web/ff/memo.html" target="_blank"
+              href="https://luysyta.github.io/jynaty/web/ff/fntms.exps.html" target="_blank"
 
-              title="memo.html"></a><span><font size="4"><font size="5"><span><font
+              title="fntms.exps.html">201</a><span><font size="4"><font size="5"><span><font
 
                       size="4">&nbsp;&nbsp;&nbsp; </font></span></font></font></span><a
 
