--- a/web/ff/fflist.html
+++ b/web/ff/fflist.html
@@ -1344,9 +1344,9 @@
               title="killsist.html">202</a></font></font></span><span><font size="4"><font
 
             size="5"><span><font size="4"><font size="5"><span><font size="4">&nbsp;&nbsp;
-                      </font></span></font></font></span><a href="https://luysyta.github.io/jynaty/web/ff/eloise.html"
+                      </font></span></font></font></span><a href="https://luysyta.github.io/jynaty/web/ff/ftrwrld.html"
 
-              target="_blank" title="eloise.html"></a></font></font></span><font
+              target="_blank" title="ftrwrld.html">203</a></font></font></span><font
 
         size="4"><span><b>&nbsp;&nbsp; </b></span></font><span><font size="4"><font
 
