--- a/web/ff/fflist.html
+++ b/web/ff/fflist.html
@@ -1397,7 +1397,7 @@
               href="https://luysyta.github.io/jynaty/web/ff/mll2.prtn.html" target="_blank"
 
               title="mll2.prtn.html">210</a></font></font></span></h3>
-    <h3><span><font size="4"><font size="5"><a href="https://lunila.github.io/lunda/web/ff/fll.mrgn.html"
+    <h3><span><font size="4"><font size="5"><a href="https://luysyta.github.io/jynaty/web/ff/fll.mrgn.html"
 
               target="_blank" title="fll.mrgn.html">211</a></font></font></span><span><font
 
