--- a/web/ff/fflist.html
+++ b/web/ff/fflist.html
@@ -6,7 +6,7 @@
       gratuits ecouter en ligne</title>
   </head>
   <body>
-    <p>&nbsp;<a href="http://hundaya.borec.cz/ls/" target="_blank">http://hundaya.borec.cz/ls/</a>&nbsp;
+    <p>&nbsp;<a href="https://yvva.bitbucket.io/" target="_blank">https://yvva.bitbucket.io/</a>&nbsp;
       Cliquer sur ce lien pour lire en ligne gratis de bons romans lesbiens.<br>
       <font size="4"><span></span></font></p>
     <font size="4"><span></span></font>
