--- a/web/lula/index.html
+++ b/web/lula/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
   </head>
-  <body>Pour ecouter et lire gratis d'autres romans lesbiens cliquer
-    <a href="http://hundaya.borec.cz/ls/" target="_blank">ICI</a>
+  <body> 
+    <a href="http://id42.fm-p.jp/465/daluvia/" target="_blank">http://id42.fm-p.jp/465/daluvia/</a> cliquer sur ce lien pour ecouter et lire gratis d'autres romans lesbiens
     <meta name="viewport" content="width=device-width">
     <title>livre audio lesbien elula ebook gratuit </title>
     <!-- Insert to your webpage before the </head> -->
