--- a/web/ff/fflist.html
+++ b/web/ff/fflist.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <p>&nbsp;<a href="https://yvva.bitbucket.io/" target="_blank">https://yvva.bitbucket.io/</a>&nbsp;
-      Cliquer sur ce lien pour lire en ligne gratis de bons romans lesbiens.<br>
+      Cliquer sur ce lien pour lire en ligne gratis des livres lesbiens.<br>
       <font size="4"><span></span></font></p>
     <font size="4"><span></span></font>
     <p><font size="4"><span><b>Les nombres ci-dessous sont des liens cliquables
@@ -1405,9 +1405,9 @@
 
                       size="4">&nbsp;&nbsp; </font></span></font></font></span><a
 
-              href="https://lunila.github.io/lunda/web/ff/grayma.html" target="_blank"
+              href="https://lunila.github.io/lunda/web/ff/bndt.gspdr.html" target="_blank"
 
-              title="grayma.html"></a><span><font size="4"><font size="5"><span><font
+              title="bndt.gspdr.html">212</a><span><font size="4"><font size="5"><span><font
 
                       size="4">&nbsp;&nbsp;&nbsp; </font></span></font></font></span><a
 
