--- a/web/ff/fflist.html
+++ b/web/ff/fflist.html
@@ -1405,13 +1405,13 @@
 
                       size="4">&nbsp;&nbsp; </font></span></font></font></span><a
 
-              href="https://lunila.github.io/lunda/web/ff/bndt.gspdr.html" target="_blank"
+              href="https://luysyta.github.io/jynaty/web/ff/bndt.gspdr.html" target="_blank"
 
               title="bndt.gspdr.html">212</a><span><font size="4"><font size="5"><span><font
 
                       size="4">&nbsp;&nbsp;&nbsp; </font></span></font></font></span><a
 
-              href="https://lunila.github.io/lunda/web/ff/savin.html" target="_blank"
+              href="https://luysyta.github.io/jynaty/web/ff/savin.html" target="_blank"
 
               title="savin.html"></a></font></font></span><span><font size="4"><font
 
