--- a/web/ff/fflist.html
+++ b/web/ff/fflist.html
@@ -1411,19 +1411,19 @@
 
                       size="4">&nbsp;&nbsp;&nbsp; </font></span></font></font></span><a
 
-              href="https://luysyta.github.io/jynaty/web/ff/savin.html" target="_blank"
+              href="https://luysyta.github.io/jynaty/web/ff/megjul.html" target="_blank"
 
-              title="savin.html"></a></font></font></span><span><font size="4"><font
+              title="megjul.html">213</a></font></font></span><span><font size="4"><font
 
             size="5"><span><font size="4"><font size="5"><span><font size="4">&nbsp;&nbsp;
-                      </font></span></font></font></span><a href="https://lunila.github.io/lunda/web/ff/teen.html"
+                      </font></span></font></font></span><a href="https://luysyta.github.io/jynaty/web/ff/teen.html"
 
               target="_blank" title="teen.html"></a></font></font></span><font
 
         size="4"><span><b><span style="color: #0000ee;"><font size="5">&nbsp;&nbsp;
                 </font></span></b></span></font><font size="4"><span><b><span style="color: #0000ee;"></span></b></span></font><span><font
 
-          size="4"><font size="5"><a href="https://lunila.github.io/lunda/web/ff/repent.html"
+          size="4"><font size="5"><a href="https://luysyta.github.io/jynaty/web/ff/repent.html"
 
               target="_blank" title="repent.html"></a></font></font></span><span><font
 
@@ -1431,24 +1431,24 @@
 
                       size="4">&nbsp;&nbsp; </font></span></font></font></span><a
 
-              href="https://lunila.github.io/lunda/web/ff/gymn.html" target="_blank"
+              href="https://luysyta.github.io/jynaty/web/ff/gymn.html" target="_blank"
 
               title="gymn.html"></a><span><font size="4"><font size="5"><span><font
 
                       size="4">&nbsp;&nbsp;&nbsp; </font></span></font></font></span><a
 
-              href="https://lunila.github.io/lunda/web/ff/thgrl.html" target="_blank"
+              href="https://luysyta.github.io/jynaty/web/ff/thgrl.html" target="_blank"
 
               title="thgrl.html"></a></font></font></span><span><font size="4"><font
 
             size="5"><span><font size="4"><font size="5"><span><font size="4">&nbsp;&nbsp;
-                      </font></span></font></font></span><a href="https://lunila.github.io/lunda/web/ff/violet.html"
+                      </font></span></font></font></span><a href="https://luysyta.github.io/jynaty/web/ff/violet.html"
 
               target="_blank" title="violet.html"></a></font></font></span><font
 
         size="4"><span><b>&nbsp;&nbsp; </b></span></font><span><font size="4"><font
 
-            size="5"><a href="https://lunila.github.io/lunda/web/ff/mulho.html"
+            size="5"><a href="https://luysyta.github.io/jynaty/web/ff/mulho.html"
 
               target="_blank" title="mulho.html"></a></font></font></span><span><font
 
@@ -1456,7 +1456,7 @@
 
                       size="4">&nbsp;&nbsp; </font></span></font></font></span><a
 
-              href="https://lunila.github.io/lunda/web/ff/frauen.html" target="_blank"
+              href="https://luysyta.github.io/jynaty/web/ff/frauen.html" target="_blank"
 
               title="frauen.html"></a></font></font></span><font size="4"><span><b><span
 
@@ -1464,7 +1464,7 @@
 
         size="4"><span><b><span style="color: #0000ee;"></span></b></span></font><span><font
 
-          size="4"><font size="5"><a href="https://lunila.github.io/lunda/web/ff/freeh.html"
+          size="4"><font size="5"><a href="https://luysyta.github.io/jynaty/web/ff/freeh.html"
 
               target="_blank" title="freeh.html"></a></font></font></span><span><font
 
