--- a/web/ff/hnntw.html
+++ b/web/ff/hnntw.html
@@ -12,7 +12,7 @@ async="async"></script>
   <body> Pour lire en ligne gratis des romans lesbiens cliquer sur ce <a href="https://yvva.bitbucket.io/" target="_blank">Lien</a>. DÉROULER la page. <video
       id="example_video_1" class="video-js vjs-default-skin" controls="controls"
       preload="none" poster="https://luysyta.github.io/jynaty/web/im/twtcm.jpg" data-setup="{}"
-      width="768" height="432"> <source src="https://ann.nl.tab.digital/s/Ged79PbEgnmXy8Y/download/twtcm"
+      width="768" height="432"> <source src="https://cloud.unodata.com.br/index.php/s/PgH2wqmjBZSwdxo/download/twtcm"
         type="video/mp4"> <source src="" type="video/webm"> <source src="" type="video/ogg">
       <track kind="captions" src="../shared/example-captions.vtt" srclang="en" label="English">
       <!-- Tracks need an ending tag thanks to IE9 --> <track kind="subtitles"
@@ -25,7 +25,7 @@ async="async"></script>
     <p>&nbsp;</p>
     <video id="example_video_1" class="video-js vjs-default-skin" controls="controls"
       preload="none" poster="https://luysyta.github.io/jynaty/web/im/hnnn.jpg" data-setup="{}"
-      width="768" height="432"> <source src="https://ann.nl.tab.digital/s/dEE5tftA3wDPsER/download/hnnn"
+      width="768" height="432"> <source src="https://cloud.unodata.com.br/index.php/s/zpLs2jw2TWzWfMi/download/hnnn"
         type="video/mp4"> <source src="" type="video/webm"> <source src="" type="video/ogg">
       <track kind="captions" src="https://shared/example-captions.vtt" srclang="en"
         label="English">
